Refactoring and creating new unit-tests (#26) (#28)
* Covered with tests all mappers for DTO

* Refactor and covered with tests CommentService

* Covered with tests TopicService

* Refactored and covered with tests LikeService

* Refactored and covered with tests PostService

* Refactored and covered with tests UserService

Co-authored-by: InCreating <123948791+InCreating@users.noreply.github.com>